# wAIves

./: .gitignore  Cargo.toml  Main.js  README.md  convert_model.py  countries.json  data.js  data.py  deploy.sh  events.js  index.html  main.js  requirements.txt  style.css  test.html  training_model.py
.githooks/: pre-commit
.github/worflows/: CICD.yml
DATA/: data.py
Models/: ModelW1.h5  ModelW2.h5  wAIves1v5.0.h5  wAIves1v5.1.h5  wAIves1v5.2.h5  wAIves2v1.0.pth  wAIves2v2.0.pth  waives30.h5
Models/wAIves1v5.0/: model.json
Models/wAIves1v5.1/: model.json
Models/wAIves1v5.2/: model.json
Models/wAIves2v1.0/: model.json
Models/wAIves2v1.1/: model.json  wAIves2v1.1.h5
Models/wAIves2v1.2/: model.json  wAIves2v1.2.h5
Models/wAIves2v1.3/: model.json  wAIves2v1.3.h5
Models/wAIves2v1.4/: model.json  wAIves2v1.4.h5
Models/wAIves2v1.5/: model.json  wAIves2v1.5.h5
Python/: create_env.sh  credits.html  index.html  manage_env.py  server.py  style.css  training_model.py  training_modelP.py  use_modelPytorch.py  use_modelTensorflow.py  wAIves_config.bat  wAIves_config.ps1  weather.py
Web/: credits.html  index.html  main.js  models.js  playground.js
app/: Cargo.toml  Dioxus.toml
app/assets/: style.css  tensorflow.js
app/src/: data.rs  main.js  main.rs  playground.js  utils.rs
app/src/components/: header.rs  main.rs  mod.rs  playground.rs
docs/: 404.html  index.html
docs/wasm/: app.js
src/: clustering.rs  coordinates.rs  dataset.rs  logs.rs  main.rs  map.py  split_dataset.rs  training_model.py  use_model.py
web/: data.js  events.js  index.html
(+27 files in other folders)
